changed logging level to INFO

--- a/logging.ini
+++ b/logging.ini
@@ -13,19 +13,19 @@ level = DEBUG
 handlers = console, file
 
 [logger___main__]
-level = DEBUG
+level = INFO
 handlers = console, file
 propagate = 0
 qualname = __main__
 
 [logger_bot.core]
-level = DEBUG
+level = INFO
 handlers = console, file
 propagate = 0
 qualname = bot.core
 
 [logger_bot.loader]
-level = DEBUG
+level = INFO
 handlers = console, file
 propagate = 0
 qualname = bot.loader
