improved player lifecycle

--- a/logging.ini
+++ b/logging.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys = root, __main__, bot.core, bot.loader, discord
+keys = root, __main__, bot.core, bot.loader, discord, discord.gateway
 
 [handlers]
 keys = console, file
@@ -35,6 +35,12 @@ level = INFO
 handlers = console, file
 propagate = 0
 qualname = discord
+
+[logger_discord.gateway]
+level = INFO
+handlers = console, file
+propagate = 0
+qualname = discord.gateway
 
 
 [handler_console]
